kyverno-policies/openshift-kyverno-policies/kyverno-qualys-agent-scc/bad-pod-qualys-agent-scc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-qualys-agent-scc
spec:
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
    runAsUser: 1000
    fsGroup: 1001
    supplementalGroups: [2002]
  volumes:
    - name: config-volume
      configMap:
        name: my-config-map
  containers:
  - name: container01
    image: busybox
    command:
      - sleep
      - "3600"
    ports:
    - hostPort: 65555
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      privileged: false
      capabilities:
        drop:
          - all
      seLinuxOptions:
        level: "s0:c123,c456"
