kyverno-policies/openshift-kyverno-policies/kyverno-qualys-agent-scc/good-pod-qualys-agent-scc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-qualys-agent-scc
spec:
  serviceAccount: qualys-agent:qualys-agent-sa
  hostNetwork: true
  hostPID: true
  hostIPC: true
  securityContext:
    runAsUser: 1000
    fsGroup: 1001
    supplementalGroups: [2002]
  volumes:
    - name: config-volume
      configMap:
        name: my-config-map
  containers:
  - name: container01
    image: busybox
    command:
      - sleep
      - "3600"
    ports:
    - hostPort: 65522
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
    securityContext:
      allowPrivilegeEscalation: true
      readOnlyRootFilesystem: false
      privileged: true
      capabilities:
        drop:
          - all
      seLinuxOptions:
        level: "s0:c123,c456"
