kyverno-policies/openshift-kyverno-policies/kyverno-qualys-agent-scc/kyverno-qualys-agent-scc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name:  kyverno-qualys-agent-scc
  annotations:
    policies.kyverno.io/title:  qualys-agent-scc
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.9.2
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Custom Policy for qualys-agent-scc deployment at Visa     
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Policy for qualys-agent-scc.         
        pattern:
          spec:
            hostNetwork: true
            =(hostIPC): true
            =(hostPID): true
            securityContext:
              runAsUser: "?*"
              fsGroup: "?*"
              supplementalGroups: "?*"    
            =(ephemeralContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            =(initContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            containers:
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
    - name: host-ports
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Use of host ports. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set between `0-65535`.          
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            =(initContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            containers:
              - =(ports):
                  - =(hostPort): "0-65535"
    - name: restrict-users
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate: 
        message: >-
          Invalid User/ServiceAccount.
        pattern:
          spec:
            serviceAccount: "qualys-agent:qualys-agent-sa"
            #serviceAccountName: "qualys-agent:qualys-agent-sa"
